--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "shaka-player": "^4.15.3",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
